# posthog-sdk-test-harness

./: .gitignore  ADAPTER_GUIDE.md  CHANGELOG.md  CONTRACT.yaml  Dockerfile  EXTENDING.md  README.md  RELEASING.md  docker-compose.override.yml.example  docker-compose.yml  pyproject.toml
.github/: CODEOWNERS
.github/workflows/: changeset-hygiene.yml  check-version.yml  publish.yml  release.yml  test-action.yml  test-sdk-action.yml  validate-versioning.yml
.sampo/: config.toml
.sampo/changesets/: cap-v1-suite-expansion.md  cap-v1-suite-fixes.md  gated-release-workflow.md  regal-wolfkin-vellamo.md  relaxed-flags-distinct-id.md  venerable-thunderbearer-kullervo.md
contracts/: adapter_actions.yaml  capture_analytics_v1_tests.yaml  capture_tests.yaml  feature_flags_tests.yaml  test_actions.yaml
examples/minimal_adapter/: Dockerfile  README.md  adapter.py
examples/parallel_adapter/: README.md  adapter.py
src/posthog_test_harness/: __init__.py  actions.py  cli.py  contract.py  report.py  types.py
src/posthog_test_harness/mock_server/: __init__.py  scoped.py  server.py  state.py
src/posthog_test_harness/mock_server/endpoints/: __init__.py  base.py  capture.py  decide.py
src/posthog_test_harness/sdk_adapter/: __init__.py  client.py  interface.py
src/posthog_test_harness/tests/: __init__.py  context.py  runner.py
src/posthog_test_harness/tests/suites/: __init__.py  base.py  contract_suite.py
tests/: test_actions.py  test_capability_gating.py  test_feature_flag_support.py  test_mock_server_state.py  test_runner.py  test_scoped_wrappers.py
