[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "posthog-sdk-test-harness"
version = "0.1.1"
description = "Language-agnostic test harness for validating PostHog SDK compliance"
readme = "README.md"
requires-python = "==3.12.12"
license = {text = "MIT"}
authors = [
    {name = "PostHog", email = "hey@posthog.com"}
]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.12",
]

dependencies = [
    "flask>=3.0.0",
    "aiohttp>=3.9.0",
    "click>=8.1.0",
    "pyyaml>=6.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.4.0",
    "pytest-asyncio>=0.21.0",
    "black>=23.0.0",
    "ruff>=0.1.0",
    "mypy>=1.5.0",
]

[project.scripts]
posthog-test-harness = "posthog_test_harness.cli:main"

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
posthog_test_harness = ["../../../CONTRACT.yaml"]

[tool.black]
line-length = 120
target-version = ['py39']

[tool.ruff]
line-length = 120
target-version = "py39"
select = ["E", "F", "I"]

[tool.mypy]
python_version = "3.9"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"
